--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "antd": "^5.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.2"
+    "react-router-dom": "^6.21.2",
+    "react-slick": "^0.30.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
