--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.13.0",
+    "axios": "^1.6.7",
+    "firebase": "^10.8.0",
+    "js-cookie": "^3.0.5",
+    "nodemailer": "^6.9.9",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
     "react-slick": "^0.30.0"
   },
